1999-12-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el (base64-encode-string): Allow the optional second arg
	`no-line-break'.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en,README.ja,mime-en.sgml,mime-en.texi,mime-ja.sgml,
	mime-ja.texi: Update for the recent ML address and ftp site.

1999-10-17  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* FLIM-MK (install-flim-package): Delete auto-autoloads.el
	and custom-load.el

1999-09-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mailcap.el (mailcap-look-at-schar): Protect against unexpected
	eof.  [cf. <tm-ja:5177>]

1999-09-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtpmail.el (smtpmail-send-it): Remove needless `concat'.

1999-09-08  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-ja.sgml, mime-en.sgml (Entity creation): Fix typo.

1999-09-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtpmail.el (smtpmail-send-it): Make directory
	`smtpmail-queue-dir' if it does not exist; convert filename of
	queued mail using `convert-standard-filename'.
	(smtpmail-queue-index): Treat `smtpmail-queue-dir' as a directory
	name using `file-name-as-directory'.
	(smtpmail-queue-dir, smtpmail-queue-mail): Remove "*" from doc
	strings.

1999-08-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtpmail.el (smtpmail-send-it): Use `time-stamp-yyyy-mm-dd' and
	`time-stamp-hh:mm:ss' instead of `current-time'.

1999-08-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* FLIM-ELS: Use `if' instead of `unless'.


1999-08-17  MORIOKA Tomohiko  <tomo@m17n.org>

	* FLIM: Version 1.13.2 (Kasanui) released.

1999-08-03  Yuuichi Teranishi <teranisi@gohome.org>

	* smtp.el (smtp-notify-success): New option.
	* (smtp-via-smtp): Request return receipt (defined in RFC1891) to
	SMTP server if `smtp-notify-success' is non-nil.
	[cf. <tm-ja:4872,4877>]

1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime.el (mime-entity-header-start-point): New generic function.
	(mime-entity-header-end-point): New generic function.
